added some things

--- a/Poketools/GenerateSprites/GenerateSprites.csproj
+++ b/Poketools/GenerateSprites/GenerateSprites.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="8.5.0" />
       <PackageReference Include="MainStreaming.Library.µFfmpeg" Version="1.0.165" />
     </ItemGroup>
 
@@ -917,6 +918,24 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="sprites\pokemonnames.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="sprites\old\front\weedle.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="sprites\old\front\weepinbell.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="sprites\old\front\weezing.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="sprites\old\front\wigglytuff.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="sprites\old\front\zapdos.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="sprites\old\front\zubat.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
